--- a/style.css
+++ b/style.css
@@ -38,13 +38,16 @@ nav {
 
 .title-icon {
   padding-top: 60px;
-  padding-right:20px;
+
   font-size: 40px;
 }
 
 .icon {
-  padding-left: 16px;
+  padding-left: 16px; 
+  color:black ;
 }
+
+
 
 .row {
   --bs-gutter-x: 0;
@@ -391,8 +394,6 @@ a {
   .footer-title{
     padding-top:20px;
   }
-
-
   .footer-content{
     padding-top:10px
   }
