--- a/style.css
+++ b/style.css
@@ -8,6 +8,10 @@ nav {
   font-weight: bold;
 }
 
+.navbar_span:hover {
+  color: red;
+}
+
 /* * 封面 */
 
 .featurette-heading {
@@ -42,15 +46,13 @@ nav {
 }
 
 .icon {
-  padding-left: 16px; 
-  color:black ;
+  padding-left: 16px;
+  color: black;
 }
-
 
 .row {
   --bs-gutter-x: 0;
 }
-
 
 /* * 作品介紹 */
 
@@ -171,8 +173,6 @@ nav {
   font-size: 20px;
 }
 
-
-
 /* * 服務項目 */
 
 .serviceContent-box {
@@ -213,7 +213,6 @@ nav {
 .service-button-pd {
   padding-bottom: 120px;
 }
-
 
 /* * 精選文章 */
 
@@ -305,7 +304,6 @@ a {
 }
 
 @media (max-width: 768px) {
-
   /* *封面 */
   .featurette .row {
     display: flex;
@@ -383,21 +381,19 @@ a {
   }
 
   .footer-title,
-  .footer-content{
+  .footer-content {
     display: flex;
     flex-direction: column;
     align-items: center;
   }
 
-  .footer-title{
-    padding-top:20px;
+  .footer-title {
+    padding-top: 20px;
   }
-  .footer-content{
-    padding-top:10px
+  .footer-content {
+    padding-top: 10px;
   }
-
 }
-
 
 @media (min-width: 768px) {
   /* * 封面  */
@@ -414,9 +410,76 @@ a {
     order: 2;
   }
 
- 
   .title-img {
     width: 1150px;
     height: 800px;
   }
+}
+
+/* * 第二面作品集  */
+
+.second-content {
+  font-size: 25px;
+  font-weight: bold !important;
+  line-height: 28.8px;
+}
+
+.second-img  {
+  display: flex;
+  justify-content: center; /* 水平置中 */
+  align-items: center; /* 垂直置中 */
+}
+
+.second-title-color {
+  color: red !important;
+}
+
+.second-pd {
+  padding-top: 120px;
+  padding-bottom: 100px;
+}
+
+.second-img {
+  background-image: url("https://images.unsplash.com/photo-1542349314-b0ceb4d90f2d?q=80&w=2069&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D");
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: center;
+  position: relative;
+  height: 460px;
+}
+
+.SecondTitle {
+  font-size: 28px;
+  font-weight: 700;
+  line-height: 33.6px;
+  padding-top: 16px;
+}
+
+.information {
+  font-size: 16px;
+  font-weight: 400;
+  line-height: 24px;
+  padding-top: 8px;
+  color: #919191;
+}
+
+.tag-content {
+  padding-top: 24px;
+}
+
+.hashtag {
+  font-size: 16px;
+  font-weight: 400;
+  line-height: 24px;
+  background: #f1f1f1;
+  padding: 4px 12px 4px 12px;
+  gap: 10px;
+  border-radius: 16px;
+}
+
+.secondImg {
+  width: 100%;
+  max-height: 400px;
+  gap: 0px;
+  opacity: 0px;
 }
