--- a/style.css
+++ b/style.css
@@ -544,3 +544,29 @@ a {
   max-width: 90%;
   max-height: 90%;
 }
+
+/* *gotop */
+
+.goTop {
+  position: fixed;
+  right: 10px;
+  bottom: 10px;
+  transform: translateX(0);
+  transition: transform 0.2s;
+}
+
+.goTop.hide {
+  transform: translateX(120%);
+}
+
+.goTop .goTopBtn {
+  background-color: transparent;
+  border: none;
+  outline: none;
+  cursor: pointer;
+}
+
+.goTop .goTopBtn .bi-arrow-up-circle-fill {
+  color: #3d82ad;
+  font-size: 50px;
+}
