--- a/style.css
+++ b/style.css
@@ -68,7 +68,7 @@ nav {
 }
 
 .project-Introduction-perfume-img {
-  background-image: url("https://firebasestorage.googleapis.com/v0/b/resume-84d0c.appspot.com/o/perfumeCover.jpg?alt=media&token=8ee5ae9e-8f7c-4051-bb55-c81f82b330c9");
+  background-image: url("https://firebasestorage.googleapis.com/v0/b/resume-84d0c.appspot.com/o/image%20(1).png?alt=media&token=a5284e56-fc5b-450f-a2d5-f6b4adc482dd");
   background-size: cover;
   background-repeat: no-repeat;
   background-position: center;
